<!--
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.myfirstandroidproject.MainActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

</RelativeLayout>
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:ignore="TextFields" >

    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        
	    <TextView
	        android:id="@+id/phone_title"
	        android:layout_width="100dp"
	        android:layout_height="wrap_content"
	        android:text="@string/sms_phone_title" />

	    <EditText
	        android:id="@+id/sms_phone" 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_toEndOf="@id/phone_title"
	        android:layout_toRightOf="@id/phone_title"
	        android:layout_alignTop="@id/phone_title"
	        android:layout_marginStart="5dp"
	        android:layout_marginLeft="5dp"
	        />
    </RelativeLayout>
    
    <FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/background"
            tools:ignore="ContentDescription" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:src="@drawable/tubiao"
            tools:ignore="ContentDescription" />

    </FrameLayout>
    
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1"
        >
        <TableRow>
            <TextView 
                android:text="@string/table_feild1"
                android:padding="3dp"
                />
            <TextView 
                android:text="@string/table_feild2"
                android:gravity="end"
                android:padding="3dp"
                />
        </TableRow>
        <TableRow>
            <TextView 
                android:text="@string/user1_name"
                android:padding="3dp"
                />
            <TextView 
                android:text="@string/user1_city"
                android:gravity="end"
                android:padding="3dp"
                />
        </TableRow>
        <TableRow>
            <TextView 
                android:text="@string/user2_name"
                android:padding="3dp"
                />
            <TextView 
                android:text="@string/user2_city"
                android:gravity="end"
                android:padding="3dp"
                />
        </TableRow>
        <TableRow>
            <TextView 
                android:text="@string/user3_name"
                android:padding="3dp"
                />
            <TextView 
                android:text="@string/user3_city"
                android:gravity="end"
                android:padding="3dp"
                />
        </TableRow>
    </TableLayout>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sms_content_title" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sms_content" />

    <Button
        android:id="@+id/sms_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sms_button_title" />

</LinearLayout>